--- a/ui/style.css
+++ b/ui/style.css
@@ -44,7 +44,8 @@ body {
 .main-content {
     display: grid;
     grid-template-columns: 200px 200px 1fr;
-    min-height: 80vh;
+    max-height: 99dvh;
+
 }
 
 .sidebar {
@@ -57,8 +58,9 @@ body {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    max-height: 120vh;
-    position: relative;
+    max-height: 99dvh;
+    position: sticky;
+    top: 0;
     width: 200px;
 }
 
@@ -303,9 +305,10 @@ body {
 
 .tab-content {
     display: none;
-    min-height: 600px;
+    height: 800px;
     flex-grow: 1;
     flex: 1;
+    overflow-y: scroll;
 }
 
 .tab-content.active {
